# OGhidra

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  NOTICE.md  README.md  ai_ghidra_capabilities.txt  build_ghidra_plugin.bat  build_ghidra_plugin.sh  main.py  pyproject.toml  requirements.txt  tool_capabilities.md
OGhidraMCP/: .gitignore  build.gradle  extension.properties  gradle.properties.example  gradle_version.txt
benchmark/: README.md  __init__.py  cli.py
docs/: enabled_tools.md  llm-logging.md
src/: __init__.py  _execution_agent_rank_method.py  active_session.py  analysis_dump.py  artifact_scanner.py  artifact_scanner_old.py  bridge.py  bridge_mcp_ghidra.py  command_parser.py  config.py  config_loader.py  context_manager.py  correlation_hooks_builtin.py  coverage_tracker.py  custom_api_client.py  enhanced_session_manager.py  event_emitter.py  execution_gate.py  external_client.py  function_graph.py  function_metadata_extractor.py  ghidra_client.py  ghidra_mcp_client.py  intelligent_context_builder.py  interactive_mode.py  lazy_ghidra.py  lead_tracker.py  memory_health.py  memory_manager.py  memory_models.py  ollama_client.py  orchestrator.py  rag_document_builder.py  report_generator.py  report_template.py  result_compactor.py  session_compactor.py  session_store.py  session_utils.py  ui.py  (+4 more)
tests/: EMBEDDING_MODEL_EVALUATION_RESULTS.md  README.md  __init__.py  analyze_logs.py  debug_scan.py  embedding_similarity_sweep.py  embedding_similarity_sweep_prompts.txt  embedding_top_prompts.txt  read_log.py  test_bridge.py  (+18 more)
(+42 files in other folders)
